添加token认证和.env example的示例

--- a/webserver/.env.example
+++ b/webserver/.env.example
@@ -1,4 +1,10 @@
 BASE_URL=
+# eg. "http://localhost:8000/v1"
 MODEL=
+# eg. "Qwen3-30B-A3B"
 OLLAMA_URL= 
+# eg. "http://localhost:11434"
 OLLAMA_MODEL= 
+# eg. "Qwen3-30B-A3B"
+API_KEYS=
+# eg. "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
